Migrate to Kotlin 1.9.0, add full-Wasm target